--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Super-Linter
 
 on: push
 
@@ -22,7 +22,7 @@ jobs:
           fetch-depth: 0
 
       - name: Super-linter
-        uses: github/super-linter@v6.0.0  # x-release-please-version
+        uses: linter/super-linter@v6.0.0  # x-release-please-version
         env:
           DEFAULT_BRANCH: main
           # To report GitHub Actions status checks
